Fixed spacing

--- a/css/indexStyled.css
+++ b/css/indexStyled.css
@@ -53,7 +53,7 @@ header {
 .rightSide {
   padding: 0px 20px;
   width: 100%;
-  max-width: 244px;
+  max-width: 320px;
   height: 60px;
   box-sizing: border-box;
 
@@ -349,7 +349,7 @@ footer {
   }
 
   .rightSide {
-    max-width: 200px;
+    max-width: 260px;
     font-size: 16px;
   }
 
@@ -431,7 +431,7 @@ footer {
   }
 
   .rightSide {
-    max-width: 180px;
+    max-width: 240px;
     font-size: 14px;
     gap: 10px;
   }
@@ -512,7 +512,7 @@ footer {
 
   .rightSide {
     font-size: 12px;
-    max-width: 150px;
+    max-width: 200px;
   }
 
   .heroText1 {
